<resources>
    <string name="app_name">Popular Movies</string>
    <string name="settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_user_settings">user_settings</string>
    <string name="trailors">Trailors</string>
    <string name="reviews">Reviews</string>
    <string name="movie_description">Movie Description</string>
    <string name="check_list">Check Full List</string>
    <string name="review">Review 1</string>
    <string name="trailor">Trailor 1</string>
    <string name="sort">SORT BY :</string>
    <string name="popularity">Popularity</string>
    <string name="rated">Top-Rated</string>
    <string name="favorite">Favorites</string>
    <string name="share">Share Link</string>
    <string name="title_activity_settings">Settings</string>
    <string name="openDrawer">Drawer Open</string>
    <string name="closeDrawer">Drawer Close</string>
    <string name="error">Error while taking data !!</string>
    <string name="no_review">Sorry no reviews found !!</string>
    <string name="no_trailor">Sorry no trailors found !!</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
