<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MovieDescriptionFragment"
    tools:showIn="@layout/moviedescription_activity_main">

    <ImageView
        android:id="@+id/desription_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingBottom="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"
            android:paddingTop="@dimen/text_padding"
            android:paddingLeft="@dimen/text_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/description_title"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_height"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#009688"
                        android:padding="50dp"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/description_image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/description_release"
                                    android:textStyle="bold"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="90dp"/>

                                <TextView
                                    android:id="@+id/description_vote"
                                    android:textStyle="bold"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="90dp"/>

                                <Button
                                    android:id="@+id/description_fav"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Mark as Favorite"
                                    android:background="#009688"
                                    android:layout_marginLeft="90dp"
                                    android:stateListAnimator="@anim/button_elevation"/>
                            </LinearLayout>

                        </LinearLayout>

                    <TextView
                        android:id="@+id/description_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/text_margin_bottom"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_marginTop="@dimen/text_margin_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trailors"
                    android:layout_marginBottom="@dimen/text_margin_bottom"
                    android:textSize="@dimen/text_height"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>

                <LinearLayout
                    android:layout_marginLeft="@dimen/text_margin_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/description_play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/description_trailor"
                        android:layout_marginLeft="@dimen/text_margin_left"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/trailor"
                        android:textSize="@dimen/text_height"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <Button
                    android:layout_marginBottom="@dimen/text_margin_bottom"
                    android:id="@+id/description_trailor_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_list"
                    android:textSize="@dimen/text_height"
                    android:textColor="@android:color/black"
                    android:stateListAnimator="@anim/button_elevation"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="@dimen/text_margin_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginBottom="@dimen/text_margin_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    android:textSize="@dimen/text_height"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>

                <LinearLayout
                    android:layout_marginLeft="@dimen/text_margin_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/description_reading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/description_review"
                        android:layout_marginLeft="@dimen/text_margin_left"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/review"
                        android:textColor="@android:color/black"
                        android:stateListAnimator="@anim/button_elevation"
                        android:textSize="@dimen/text_height"
                        android:layout_marginBottom="@dimen/text_margin_bottom"/>

                </LinearLayout>

                <Button
                    android:id="@+id/description_review_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_list"
                    android:textSize="@dimen/text_height"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="@dimen/text_margin_bottom"
                    android:stateListAnimator="@anim/button_elevation"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
    </ScrollView>
</FrameLayout>